--- a/introduction.qmd
+++ b/introduction.qmd
@@ -54,31 +54,36 @@ In pairs, find three examples where web maps are used to communicate an idea. Co
 
 Post each sheet as a separate item on the Teams channel for Lab No.1
 
-As an example, below is the sheet for the project "A map of every building in America" !["A map of every building in America"](./img/buildamerica.png)
+As an example, below is the sheet for the project "A map of every building in America" !["WHO Coronavirus (COVID-19) Dashboard"](./img/who_covid.png)
 
 -   **Substantive**
 
-    -   `Title`: A map of every building in America
+    -   `Title`: WHO Coronavirus (COVID-19) Dashboard
 
-    -   `Author`: The New York Times
+    -   `Author`: World Health Organization
 
-    -   `Big idea`: Show patterns in the built environment through building footprints
+    -   `Big idea`: Shows confirmed COVID-19 cases and deaths by country to date
 
-    -   `Message`: The project displays a map of the US where only building footprints are shown. This element is used to show a) how much buildings tell about places and the build environment, and b) some interesting specific examples that illustrate large trends in society (e.g. urban sprawl)
+    -   `Message`: The project displays a map of the world where COVID-19 cases are shown by country. This element is used to show which countries have had more cases (large trends). A drop down button allows us to visualise the map by a) Total per 100,000 population b) % change in the last 7 days c) newly reported in the last 7 days d) newly reported in the last 24 hours.
 
 -   **Technical**
 
-    -   `URL`: [`https://www.nytimes.com/interactive/2018/10/12/us/map-of-every-building-in-the-united-states.html`](https://www.nytimes.com/interactive/2018/10/12/us/map-of-every-building-in-the-united-states.html)
+    -   `URL`: [`https://covid19.who.int/`](https://covid19.who.int/)
 
     -   `Interactivity`: Yes
 
     -   `Zoomable`: Yes
 
-    -   `Tooltips`: No
+    -   `Tooltips`: Yes
 
-    -   `Basemap`: Yes, Mapbox/OpenStreetMap
+    -   `Basemap`: No
 
-    -   `Technology`: MapboxGL
+    -   `Technology`: Unknown
+
+Here are a couple of other COVID-19 examples of web-maps that where basemaps and technology is easier to spot.
+
+-   ["London School of Hygiene & Tropical Medicine - COVID-19 tracker"](https://vac-lshtm.shinyapps.io/ncov_tracker/?_ga=2.246644480.501918083.1674819300-1251881958.1674819300)
+-   ["Tracking Coronavirus in the United Kingdom: Latest Map and Case Count"](https://www.nytimes.com/interactive/2021/world/united-kingdom-covid-cases.html)
 
 ### Class discussion
 
